2004-09-08  David Bateman  <dbateman@free.fr>

	* ov-fcn-inline.cc (octave_fcn_inline::save_ascii,
	octave_fcn_inline::load_ascii, octave_fcn_inline::save_binary,
	octave_fcn_inline::load_binary, octave_fcn_inline::save_hdf5,
	octave_fcn_inline::load_hdf5): New functions. 
	* ov-fcn-inline.h: Provide decls.

2004-09-08  John W. Eaton  <jwe@octave.org>

	* ov.h: Add octave_array_type_traits specialization for
	boolNDArray element type.

2004-09-07  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc: Instantiate octave_stream::write for Array<bool>.
	(octave_stream::read): Expand read_fptr_table to include dt_logical.

	* ov-bool.h (octave_bool::write): New function.
	* ov-bool-mat.h (octave_bool_matrix::write): New function.

	* ov-fcn-inline.h (octave_fcn_inline::octave_fcn_inline): New copy
	constructor.
	(octave_fcn_inline::clone, octave_fcn_inline::empty_clone):
	New functions.

	* ov-fcn-handle.h (octave_fcn_handle::octave_fcn_handle): New copy
	constructor.
	(octave_fcn_handle::clone, octave_fcn_handle::empty_clone):
	New functions.

2004-09-06  John W. Eaton  <jwe@octave.org>

	* ov.cc (install_types): Call octave_fcn_inline::register_type.

	* version.h (OCTAVE_API_VERSION): Now api-v10.

	* OPERATORS/op-b-b.cc, OPERATORS/op-bm-bm.cc: Define and install
	unary plus and unary minus operators.

	* OPERATORS/op-int.h, OPERATORS/op-cm-cm.cc,
	OPERATORS/op-cs-cs.cc, OPERATORS/op-m-m.cc, OPERATORS/op-range.cc:
	Define and install unary plus operator.

	* ov.cc (unary_op_as_string): Handle op_uplus too.

	* parse.y (prefix_expr): Build unary plus op here instead of
	converting to no-op.
	(make_prefix_op): Accept op_uplus.

2004-09-03  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-b-bm.cc (DEFCONV): Define bool scalar to bool
	matrix conversion.
	(install_b_bm_ops): Install it.
	Install conversion for assignment of bool matrix to indexed bool.
	* OPERATORS/op-b-b.cc (install_b_b_ops): Install conversion for
	assignment of bool to indexed bool.
